--- a/static/index.html
+++ b/static/index.html
@@ -2,12 +2,12 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>mblog</title>
+    <title>cannibal</title>
 	<link rel="stylesheet" type="text/css" href="default.css">
 </head>
 <body>
     <div id="control">
-        <form id="post" onsubmit="makepost(this)" method="post">
+        <form id="post" onsubmit="post(this)" method="post">
             <input type="text" name="user" placeholder="Your name"><br>
             <textarea name="message" placeholder="Your message"></textarea><br>
             <input type="submit" id="submitbutton" value="Submit / refresh">
