--- a/static/index.html
+++ b/static/index.html
@@ -10,7 +10,7 @@
     <div id="control">
         <form id="postform" onsubmit="post(this); return false;" method="post">
             <textarea name="message" placeholder="Your message"></textarea><br>
-            <input type="submit" value="Submit / refresh">
+            <input type="submit" value="Submit">
         </form>
     </div>
     <div id="feed" class="center"></div>
