--- a/static/index.html
+++ b/static/index.html
@@ -15,7 +15,7 @@
     </div>
     <div id="feed" class="center"></div>
 
-    <div id="loginbutton" onclick="openlogin(); return false;">Log in</div>
+    <div id="mbutton" onclick="openlogin(); return false;">Log in</div>
 
     <div id="login" class="center">
         <form id="loginform" onsubmit="login(this); return false;" method="post">
